--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile "org.hibernate:hibernate-core:$hibernateVersion"
     compile "c3p0:c3p0:0.9.1.2"
     compile "org.hibernate:hibernate-c3p0:$hibernateVersion"
+
+    compile "org.projectlombok:lombok:1.16.10"
 }
 
 task wrapper(type: Wrapper) {
