--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     compile "org.hibernate:hibernate-c3p0:$hibernateVersion"
 
     compile "org.projectlombok:lombok:1.16.10"
+    compile "javax.servlet:javax.servlet-api:3.1.0"
+
 }
 
 task wrapper(type: Wrapper) {
