--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     compile "org.springframework:spring-jdbc:$springVersion"
     compile "org.springframework:spring-orm:$springVersion"
     compile "org.springframework.data:spring-data-jpa:$springDataVersion"
+    compile "commons-fileupload:commons-fileupload:1.3.1"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.5.0"
 
     compile "org.apache.logging.log4j:log4j-api:$log4jVersion"
     compile "org.apache.logging.log4j:log4j-core:$log4jVersion"
@@ -40,6 +42,8 @@ dependencies {
 
     compile "org.projectlombok:lombok:1.16.10"
     compile "javax.servlet:javax.servlet-api:3.1.0"
+    compile "javax.servlet:jstl:1.2"
+
 
 }
 
