--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,7 @@
     <servlet-mapping>
         <servlet-name>SpringMVC</servlet-name>
         <url-pattern>*.do</url-pattern>
+        <url-pattern>*.json</url-pattern>
     </servlet-mapping>
 
     <filter>
