--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,11 @@ dependencies {
     compile "javax.servlet:javax.servlet-api:3.1.0"
     compile "javax.servlet:jstl:1.2"
 
-//    compile "com.alibaba:fastjson:1.2.21"
+    compile "com.alibaba:fastjson:1.2.21"
     compile "org.apache.commons:commons-lang3:3.5"
     compile "org.slf4j:slf4j-log4j12:1.7.24"
+
+    compile 'org.apache.httpcomponents:httpclient:4.5.3'
 }
 
 task wrapper(type: Wrapper) {
