--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,8 @@ dependencies {
     compile "org.apache.commons:commons-lang3:3.5"
     compile "org.slf4j:slf4j-log4j12:1.7.24"
 
-    compile 'org.apache.httpcomponents:httpclient:4.5.3'
+    compile "org.apache.httpcomponents:httpclient:4.5.3"
+    compile "org.apache.httpcomponents:httpcore-nio:4.4.6"
 }
 
 task wrapper(type: Wrapper) {
